--- a/index.html
+++ b/index.html
@@ -5,12 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Private Pay</title>
+
+    <style>
+        .colortext {
+          color: rgba(0, 0, 0, 0.5);
+        }
+       </style>
+
 </head>
+
+
 <body>
     <div class="container">
         <div class="inner">
             <div class="item">
-                <div class="usercard" id="usercard"></div>
+                <div class="btn" id="btn1">Вызвать уведомление</div>
+                <div class="btn" id="btn2">Вызвать разрешение</div>
+                <div class="btn" id="btn3">Вызвать вибрацию</div>
+                <div class="btn" id="btn4">Hide Main Button</div>
+                <div class="btn" id="btn5">Show Main Button</div>
+                <div class="btn" id="btn6">На весь экран</div>
+                <div class="btn" id="btn7">Показать нопку назад</div>
+                <div class="btn" id="btn8">Скрыть нопку назад</div>
+                </div>
             </div>
         </div>
     </div>
