--- a/index.html
+++ b/index.html
@@ -6,28 +6,16 @@
     <link rel="stylesheet" href="style.css">
     <title>Private Pay</title>
 
-    <style>
-        .colortext {
-          color: rgba(0, 0, 0, 0.5);
-        }
-       </style>
-
 </head>
 
 
 <body>
     <div class="container">
         <div class="inner">
+            Private Pay
             <div class="item">
-                <div class="btn" id="btn1">Вызвать уведомление</div>
-                <div class="btn" id="btn2">Вызвать разрешение</div>
-                <div class="btn" id="btn3">Вызвать вибрацию</div>
-                <div class="btn" id="btn4">Hide Main Button</div>
-                <div class="btn" id="btn5">Show Main Button</div>
-                <div class="btn" id="btn6">На весь экран</div>
-                <div class="btn" id="btn7">Показать нопку назад</div>
-                <div class="btn" id="btn8">Скрыть нопку назад</div>
-                </div>
+            
+            </div>
             </div>
         </div>
     </div>
