--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card" onclick="main.html">
             <div class="image">
                 <img src="item2.png">
                 <div class="comment">
