--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         
 
-        <div class="card">
+        <div class="card" onclick="href='test.html';">
             <div class="image">
                 <img src="item2.png">
                 <div class="comment">
